linter/src/rules/snapshots/squawk_linter__rules__disallow_unique_constraint__test_rules__adding_unique_constraint-3.snap
---
source: linter/src/rules/disallow_unique_constraint.rs
expression: "check_sql(ignored_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [],
)
