linter/src/rules/snapshots/squawk_linter__rules__disallow_unique_constraint__test_rules__adding_unique_constraint.snap
---
source: linter/src/rules/disallow_unique_constraint.rs
expression: "check_sql(bad_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [
        RuleViolation {
            kind: DisallowedUniqueConstraint,
            span: Span {
                start: 0,
                len: Some(
                    80,
                ),
            },
            messages: [
                Note(
                    "Adding a UNIQUE constraint requires an ACCESS EXCLUSIVE lock which blocks reads.",
                ),
                Help(
                    "Create an index CONCURRENTLY and create the constraint using the index.",
                ),
            ],
        },
    ],
)
