linter/src/rules/snapshots/squawk_linter__rules__disallow_unique_constraint__test_rules__unique_constraint_inline_add_column_unique.snap
---
source: linter/src/rules/disallow_unique_constraint.rs
expression: lint_sql(sql)
---
[
    RuleViolation {
        kind: DisallowedUniqueConstraint,
        span: Span {
            start: 0,
            len: Some(
                47,
            ),
        },
        messages: [
            Note(
                "Adding a UNIQUE constraint requires an ACCESS EXCLUSIVE lock which blocks reads.",
            ),
            Help(
                "Create an index CONCURRENTLY and create the constraint using the index.",
            ),
        ],
    },
]
